--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <link rel="shortcut icon" href="./images/favicon.png">
 
-  <script src="./script.js" defer></script>
+  <script src="./script/script.js" defer></script>
 
   <title>Riot Games</title>
 </head>
